--- a/services/nginx/data/nginx.conf
+++ b/services/nginx/data/nginx.conf
@@ -29,7 +29,7 @@ http {
         location /redmine {
             resolver           127.0.0.11;
 
-            proxy_pass         http://redmine;
+            proxy_pass         http://redmine:3000;
             proxy_redirect     off;
 
             proxy_set_header   Host $host;
