--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: ./services/redmine/
     image: kannji_grace_redmine
-    #restart: always
+    restart: always
     environment:
       - REDMINE_DB_MYSQL=redmine-db
       - REDMINE_DB_PASSWORD=example
@@ -21,7 +21,7 @@ services:
 
   redmine-db:
     image: mysql
-    #restart: always
+    restart: always
     environment:
       - MYSQL_ROOT_PASSWORD=example
       - MYSQL_DATABASE=redmine
@@ -32,7 +32,9 @@ services:
       timeout: 20s
       retries: 10
     networks:
-      - redmine
+      redmine:
+        aliases:
+          - redmine-db
 
   owncloud:
     image: owncloud
@@ -61,10 +63,13 @@ services:
       timeout: 20s
       retries: 10
     networks:
-      - owncloud
+      owncloud:
+        aliases:
+          - owncloud-db
 
   jenkins:
     image: jenkins
+    restart: always
     volumes:
       # when mount not working: sudo chown -R 1000 services/jenkins/mounts/jenkins_home
       - ./services/jenkins/mounts/jenkins_home:/var/jenkins_home
